# Skyscope-Sentinel-Quantum-AI

./: CONTRIBUTING.md  Dockerfile  LICENSE.md  QIP_X_Protocol.txt  QuantumAI_Upgrade_Instructions.md  README.md  REVIEW.md  deploy.sh  environment.yml  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.py  tsconfig.json  vite.config.ts
ai_engine/: __init__.py  quantum_neural_network.py
api/: main.py
app/: api.py
backend/: quantumai_backend.py
config/: config.json  config.py
contracts/: QuantumAILicense.sol  README.md
core/: circuits.py  performance.py  security.py
deployment/: quantum_cloud_config.json
docker/: Dockerfile  deploy.sh
docs/: ARCHITECTURE.md  CI_CD.md  CONTRIBUTING.md  DEPLOYMENT.md  ETHICS.md  GETTING_STARTED.md  QUANTUM_CHAOS.md  README.md  REVIEW.md  TESTING.md  contributor_roadmap.md  diagnostic_debugging_strategy.md
frontend/: README.md
k8s/: deployment.yaml
mvp/: hybrid_model_demo.py  post_quantum_encryption_demo.py
notebooks/: quantum_ml_example.ipynb
profiling/: performance_profiler.py
q_fabric/: __init__.py  backend_wrapper.py  hybrid_model.py  quantum_api.py  quantum_optimizer.py
quantum_ai/: __init__.py  qip_integration.py  quantum_optimizer.py  quantum_threadline.py
quantum_api/: README.md  config.py  requirements.txt  run.py
quantumai/: __init__.py
scripts/: decrypt.py  encrypt_and_push_ipfs.py
security/: __init__.py  post_quantum_crypto.py  quantum_cryptography.py  quantum_shieldwall.py  rbac_config.json
src/: App.tsx  analysis.py  cloud_interface.py  (+4 more)
(+94 files in other folders)
